// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassedChecksSection renders 1`] = `
<CollapsibleResultSection
  badgeCount={3}
  cardRuleResults={
    Array [
      Object {},
      Object {},
      Object {},
    ]
  }
  containerClassName="result-section"
  containerId="passed-checks-section"
  deps={Object {}}
  headingLevel={3}
  outcomeType="pass"
  title="Passed checks"
/>
`;

exports[`PassedChecksSection renders when card data is missing 1`] = `
<CollapsibleResultSection
  badgeCount={0}
  cardRuleResults={Array []}
  containerClassName="result-section"
  containerId="passed-checks-section"
  deps={Object {}}
  headingLevel={3}
  outcomeType="pass"
  title="Passed checks"
/>
`;
